--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <section class="main-guests" id="guests">
             <h2 class="main-guests__title">Invitadas/os estelares</h2>
             <div class="main-guests__gallery">
-                <img src="/images/grace-hopper.png" alt="Grace Hopper" class="main-guests__gallery--image">
-                <img src="/images/Katie-Bouman.png" alt="Katie Bouman" class="main-guests__gallery--image">
+                <img src="images/grace-hopper.png" alt="Grace Hopper" class="main-guests__gallery--image">
+                <img src="images/Katie-Bouman.png" alt="Katie Bouman" class="main-guests__gallery--image">
                 <img src="images/Margaret_Hamilton.png" alt="Margaret_Hamilton" class="main-guests__gallery--image">
                 <img src="images/computer_in1950s.png" alt="Computer in 1950" class="main-guests__gallery--image">
                 <img src="images/Computer_operators.png" alt="Computer operator" class="main-guests__gallery--image">
